# OpenSource_Problems

./: .gitignore  LICENSE  README.md  kmeans.py  transformer.py
Background_Blur/: README.md  background_blur.py
Circular_Buffer/: README.md
Circular_Buffer/src/: Circular_Buffer.cpp  Circular_Buffer_Deque.cpp
Geometric_Median/src/: geometric_median.cpp
IOU/: IOU.cpp  README.md  iou.py
LeetCode/: queue_without_stl.cpp
LeetCode/1. Two Sum/: two_sum.cpp
LeetCode/136. Single Number/: find_unique.cpp
LeetCode/15. Three Sum/: three_sum.cpp
LeetCode/2. Add Two Numbers/: add_two_numbers.cpp
LeetCode/3. Longest Substring Without Repeating Characters/: longest_substring_without_repeating_characters.cpp
LeetCode/5. Longest Palindromic Substring/: longest_palindromic_substring.cpp
LeetCode/949. Largest Time for Given Digits/: max_time.cpp
Matrix Class/: README.md
Matrix_Class/src/: Matrix_Class.cpp
NMS/: nms.py
Point_In_Polygon/: README.md
Point_In_Polygon/src/: point_in_polygon.cpp
Spherical_View_Projection/: CMakeLists.txt  README.md  doxy_config
Spherical_View_Projection/include/Spherical_View_Projection/: Spherical_View_Projection.h
Spherical_View_Projection/src/: Spherical_View_Projection.cpp
point_in_polygon/: CMakeLists.txt  README.md
point_in_polygon/src/: point_in_polygon.cpp
